@@ -22,7 +22,7 @@ public class CaesarCipher {
         this.offset = offset;
         Character[] alphabet = new Character[26];
         for (int i = 0; i < alphabet.length; i++) {
-            alphabet[i] = new Character(97+i);
+            alphabet[i] = Character.valueOf((char) ('a' + i));
         }
         DynamicArray<Character> cipher = new DynamicArray<>(offset, alphabet);
     }
@@ -36,22 +36,31 @@ public class CaesarCipher {
         for (int i = 0; i < alphabet.length; i++) {
             if (alphabet[i] == val){
                 return i;
+            } 
+            else{
+                return null;
             }
         }
-        return 0;
     }
 
     /** Encode a message using the cipher
-     * @param T message to encode
+     * @param String message to encode
      * @return encoded message */  
     public String encode(String message){
         for (int i = 0; i < message.length; i++) {
             String letter = message.charAt(i);
-        }{
-
+            // have a letter and want to encode it by adding an offset to that letter of the alphabet
+            
+            String encoded_letter = alphabet.DynamicArray.get(i, offset);
+            String[] encoded_message = new String[message.length];
+            message.DynamicArray.set(i + offset, letter);
+             
         }
-        return new String(); 
-     }
+        }
+
+        
+         
+     
 
     /** Decode a message using the cipher 
      * @param String message to decode
@@ -60,7 +69,7 @@ public class CaesarCipher {
     */
     public String decode(String message){
         // Fill in here and update return statement based on your code
-        return new String();
+        return new String(); // subtract offset from index
     }
 
 
